# OpenClaw-Manager

./: .gitignore  Agent.md  LICENSE  README.md  app.py  config.py  index.html  list.md  main.py  package.json  requirements.txt  run.bat  tailwind.config.js  tsconfig.json  vite.config.ts
assets/: README.md
core/: config_manager.py  log_manager.py  model_manager.py  model_tester.py  openclaw_api.py  plugin_manager.py  process_manager.py  settings_manager.py  skill_manager.py  stats_manager.py  template_manager.py
python-backend/api/: config.py
resources/styles/: dark.qss  light.qss
resources/templates/: deepseek.json  openai.json  xiaomimimo.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: main.css
src/bridge/: index.ts
src/components/: SplashScreen.vue
src/composables/: useI18n.ts
src/locales/: en.json  zh.json
src/router/: index.ts
src/stores/: config.ts  index.ts  logs.ts  models.ts  plugins.ts  process.ts  sessions.ts  settings.ts  skills.ts  stats.ts
src/views/: Config.vue  Dashboard.vue  Logs.vue  Models.vue  Plugins.vue  Process.vue  Sessions.vue  Settings.vue  Skills.vue  Stats.vue
ui/: command_palette.py  config_tab.py  log_tab.py  main_window.py  model_test_dialog.py  models_tab.py  plugins_tab.py  process_tab.py  session_tab.py  settings_tab.py  skill_editor.py  skills_tab.py  splash_screen.py  stats_tab.py  template_dialog.py
ui/widgets/: chart_widget.py
utils/: file_watcher.py  translator.py
utils/translations/: en.json  zh.json
(+3 files in other folders)
