[package]
name = "openclaw-manager"
version = "1.1.0"
description = "OpenClaw Manager - A desktop application for managing OpenClaw"
authors = ["Nixer-2301"]
license = "GPL-3.0"
repository = "https://github.com/Nixer-2301/OpenClaw-Manager"
edition = "2021"

[lib]
name = "openclaw_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
